# Parser_in_the_database

./: README.md  main.py  pyproject.toml
abc_class/: abc_parse.py
manager/: bd_manager.py
parse_class/: parse.py
